Fixed bugs, z-index, mensaje superior y tipo de envio

--- a/src/app/core/components/alternative-menu/alternative-menu.component.scss
+++ b/src/app/core/components/alternative-menu/alternative-menu.component.scss
@@ -1,3 +1,8 @@
+ 
+.navbar-toggler-icon {
+    z-index: 500;
+}
+
 .frente{
     z-index: 500;
 }
@@ -21,6 +26,6 @@
     -webkit-background-clip: text;
   }
 
-  .paypalicon{
+.paypalicon{
     color:#00457C;
 }
